Fix Spacing + Contact

--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,7 @@ table {
 .stills-item p {
   position: absolute;
   bottom: 16px;
-  right: 10px;
+  right: 36px;
   font-size: 16px;
   font-style: normal;
   opacity: 0;
@@ -264,7 +264,7 @@ main a:hover {
   font-size: 24px;
   width: 420px;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 30%;
 }
 
 form {
